[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Background/bg_TitleMenu.png" type="Texture" id=1]
[ext_resource path="res://Assets/exit.png" type="Texture" id=2]
[ext_resource path="res://Assets/exit_focus.png" type="Texture" id=3]
[ext_resource path="res://Assets/startgame.png" type="Texture" id=4]
[ext_resource path="res://Assets/startgame_focus.png" type="Texture" id=5]
[ext_resource path="res://Assets/StoriesOfFrog.png" type="Texture" id=6]
[ext_resource path="res://TitleScreen.gd" type="Script" id=7]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 20
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 252.0
margin_top = 20.0
margin_right = 772.0
margin_bottom = 492.0
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="tr_title" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 520.0
margin_bottom = 227.0
texture = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 243.0
margin_right = 520.0
margin_bottom = 311.0

[node name="tb_start_game" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 520.0
margin_bottom = 32.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 5 )

[node name="tb_exit" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 520.0
margin_bottom = 68.0
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 3 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/tb_start_game" to="." method="_on_tb_start_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/tb_exit" to="." method="_on_tb_exit_pressed"]
